# PADZE

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codemeta.json  pyproject.toml
.github/: SECURITY.md
.github/workflows/: publish.yml  tests.yml
docs/: CHANGELOG.md  MANUAL.md  PADZE_Manual.tex  README.md  RELEASING.md  adze-1.0-reference.md  usage-and-verification.md
examples/: README.md  trio.vcf
scripts/: README.md
scripts/benchmarks/: README.md  benchmark_padze_vs_original.py  fashion_mnist_adze_stats.py
scripts/data/: README.md  fetch_hgdp_rosenberg2005.py
scripts/repro/: validate_padze.py
src/padze/: README.md  __init__.py  cli.py  features.py  io.py  moments.py  rarefaction.py
tests/: README.md  test_adze_io_features.py  test_adze_moments.py  test_adze_rarefaction.py  test_classical_rolling.py  test_cpp_parity.py  test_cpp_parity_10k.py  test_fashion_mnist_adze_stats.py  test_feature_streaming.py  test_hgdp_competition_outputs.py  test_multi_population_pihat.py  test_original_adze_example.py  test_vcf_allele_coding_invariance.py  test_vcf_structure_equivalence.py
tests/fixtures/: trio.popmap  trio.vcf
