[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padze"
version = "0.1.0"
description = "PADZE (Pythonic Allelic Diversity Analyzer): a NumPy implementation and extension of ADZE allelic-rarefaction statistics with VCF and STRUCTURE input."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andres del Castillo" },
  { name = "Yitzchak Shmalo", email = "yitzchak.shmalo@mail.huji.ac.il" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "PADZE",
  "ADZE",
  "allelic richness",
  "population genetics",
  "rarefaction",
  "VCF"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.22"
]

[project.urls]
Homepage = "https://github.com/Andres42611/PADZE"
Repository = "https://github.com/Andres42611/PADZE"
Issues = "https://github.com/Andres42611/PADZE/issues"

[project.optional-dependencies]
test = [
  "pytest>=7",
  "scipy>=1.9"
]
dev = [
  "build>=1",
  "pytest>=7",
  "scipy>=1.9",
  "twine>=4"
]

[project.scripts]
padze = "padze.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "manual: long-running or externally provisioned checks skipped unless explicitly enabled"
]
